--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html{
 }
 
 body{
-    background-color: beige;
+    background-color: rgb(220, 220, 220);
 }
 
 #inputField{
@@ -56,11 +56,14 @@ body{
 }
 
 .movieCard{
+    position: relative;
     width: 20vw;
-    height: 70vh;
+    height: fit-content;
+    min-height: 70vh;
     background-color: aqua;
     inset: 0;
-    margin: 100px auto;
+    margin: auto;
+    top: 50px;
     background-color: rgb(200, 220, 200);
     border: 1px solid black;
     border-radius: 8px;
